# tensor2frame-bench

./: .gitignore  README.md  pyproject.toml
bench/: bench_suite.py  config.py  test_iio_write.py  test_pygfx.py  test_pytorch3d.py  test_pyvista.py
playground/: test.py
src/tensor2frame_bench/: fractals.py  pyvista_func.py  timer.py
